...
            android:layout_span="3"
            android:maxLines="2"
            />
    </TableRow>

    <TableRow
        android:id="@+id/btn_task_due_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        >

        <TextView
...
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/btn_task_cancel"
            android:src="@drawable/ic_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="1"
            />

...
