package co.kaush.rem.ui;

import android.support.test.espresso.action.ViewActions;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import co.kaush.rem.R;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class TaskCreateFragmentTest {

    /**
     * A JUnit {@link Rule @Rule} to launch your activity under test. This is a replacement
     * for {@link android.test.ActivityInstrumentationTestCase2}.
     * <p>
     * Rules are interceptors which are executed for each test method and will run before
     * any of your setup code in the {@link @Before} method.
     * <p>
     * {@link ActivityTestRule} will create and launch of the activity for you and also expose
     * the activity under test. To get a reference to the activity you can use
     * the {@link ActivityTestRule#getActivity()} method.
     */
    @Rule public ActivityTestRule<LauncherActivity> activityRule =//
          new ActivityTestRule<>(LauncherActivity.class);

    @Test
    public void launchTaskCreateScreen() {
        onView(withId(R.id.menu_add)).perform(ViewActions.click());
        onView(withId(R.id.btn_task_due_date)).check(matches(isDisplayed()));
    }

    @Test
    public void cancellingOfTaskCreation() {
        onView(withId(R.id.menu_add)).perform(ViewActions.click());
        onView(withId(R.id.btn_task_cancel)).perform(ViewActions.click());
        onView(withId(R.id.menu_add)).check(matches(isDisplayed()));
    }
}
